src/styles/components/codes.css
@layer components {
  .code-block {
    @apply border border-surface-extra-accent rounded-xl;
    @apply overflow-hidden min-w-0 max-w-full;
  }

  .code-header {
    @apply flex items-center justify-between px-4 pt-0.5;
    @apply bg-surface-accent border-b border-surface-extra-accent;
  }

  .code-pre {
    @apply max-h-[70dvh] overflow-y-scroll overflow-x-auto;
    @apply pl-4 pr-12 py-3 bg-surface-muted;
  }

  .code-inline {
    @apply border border-surface-extra-accent rounded-xl overflow-hidden;
    @apply items-center bg-surface-muted px-2 py-0.5;
  }

  pre,
  code {
    @apply text-content text-sm font-mono leading-tight text-left whitespace-pre;
    font-family: 'Space Mono', monospace;
  }

  pre::selection,
  code::selection,
  pre *::selection,
  code *::selection {
    @apply bg-info-extra-muted text-content;
  }

  .token.comment,
  .token.prolog {
    @apply text-success-muted;
  }

  .token.punctuation {
    @apply text-content;
  }

  .token.property,
  .token.boolean,
  .token.number,
  .token.constant,
  .token.symbol,
  .token.unit {
    @apply text-success;
  }

  .token.selector,
  .token.string,
  .token.char,
  .token.builtin {
    @apply text-warning;
  }

  .token.operator,
  .token.entity {
    @apply text-content;
  }

  .token.keyword {
    @apply text-primary;
  }

  .token.function {
    @apply text-info;
  }

  .token.regex {
    @apply text-danger;
  }

  .token.important {
    @apply text-primary-accent;
  }

  .token.class-name,
  .token.maybe-class-name {
    @apply text-success-accent;
  }

  .token.attr-name {
    @apply text-info-accent;
  }

  .token.attr-value {
    @apply text-warning-accent;
  }

  .token.tag {
    @apply text-primary;
  }

  .token.tag .token.punctuation {
    @apply text-content-muted;
  }

  .line-highlight.line-highlight {
    @apply bg-warning-extra-accent/20 shadow-inner;
    box-shadow: inset 5px 0 0 var(--color-warning);
  }
}

